WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81008
Region::contains(IntPoint) is slow
https://bugs.webkit.org/show_bug.cgi?id=81008
Summary
Region::contains(IntPoint) is slow
Dana Jansens
Reported
2012-03-13 10:08:20 PDT
Region::contains(IntPoint) is slow
Attachments
Patch
(2.03 KB, patch)
2012-03-13 10:11 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch
(8.23 KB, patch)
2012-03-13 11:09 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch
(8.23 KB, patch)
2012-03-13 11:26 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch
(8.41 KB, patch)
2012-03-13 11:31 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch
(8.47 KB, patch)
2012-03-13 11:42 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-03-13 10:11:19 PDT
Created
attachment 131653
[details]
Patch
Dana Jansens
Comment 2
2012-03-13 11:09:43 PDT
Created
attachment 131672
[details]
Patch
Dana Jansens
Comment 3
2012-03-13 11:26:19 PDT
Created
attachment 131680
[details]
Patch Removed the early-out on if (isEmpty()). The first for loop will break immediately anyhow, so this is just adding extra comparisons.
Anders Carlsson
Comment 4
2012-03-13 11:28:31 PDT
Comment on
attachment 131680
[details]
Patch Oops, meant to r- this. Could you add a more descriptive explanation in the ChangeLog? Other than that the change looks fine!
Dana Jansens
Comment 5
2012-03-13 11:31:46 PDT
Created
attachment 131682
[details]
Patch
Dana Jansens
Comment 6
2012-03-13 11:42:22 PDT
Created
attachment 131685
[details]
Patch
WebKit Review Bot
Comment 7
2012-03-13 15:35:30 PDT
Comment on
attachment 131685
[details]
Patch Clearing flags on attachment: 131685 Committed
r110624
: <
http://trac.webkit.org/changeset/110624
>
WebKit Review Bot
Comment 8
2012-03-13 15:35:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug