Region::contains(IntPoint) is slow https://bugs.webkit.org/show_bug.cgi?id=81008

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-13
Reviewed by Anders Carlsson.

Source/WebCore:

Speed up Region::contains(IntPoint) by directly testing if the point
is inside the Region's shape, rather than using a temporary 1x1 Region
for the test.

Unit test: RegionTest.containsPoint

* platform/graphics/Region.cpp:
(WebCore::Region::contains):

Source/WebKit/chromium:

* WebKit.gypi:
* tests/RegionTest.cpp: Added.
(WebCore):
(WebCore::TEST):

Canonical link: https://commits.webkit.org/98200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110624 268f45cc-cd09-0410-ab3c-d52691b4dbfc